--- a/index.html
+++ b/index.html
@@ -71,15 +71,16 @@
 						<h3>What all can you make in it?</h3>
 						<p>
 							<ul>
+								<li>Make presentations like this using <b>reveal.js</b></li>
 								<li>Your portfolio website</li>
 								<li>Sites and apps like reddit, twitter, youtube etc.</li>
-								<li>Mobile apps using React Native, Ionic framework</li>
-								<li>Desktop apps like VSCode using Electron, Tauri</li>
+								<li>Mobile apps using <b>React Native</b>, <b>Ionic framework</b></li>
+								<li>Desktop apps like VSCode using <b>Electron</b>, <b>Tauri</b></li>
 								<li>Progressive Web Apps</li>
-								<li>2D Graphics using p5.js</li>
-								<li>3D Graphics using three.js</li>
-								<li>Games using game engines kaboom.js</li>
-								<li>3D Physics Simulation using ammo.js, cannon.js</li>
+								<li>2D Graphics using <b>p5.js</b></li>
+								<li>3D Graphics using <b>three.js</b></li>
+								<li>Games using game engines <b>kaboom.js</b></li>
+								<li>3D Physics Simulation using <b>ammo.js</b>, <b>cannon.js</b></li>
 							</ul>
 						</p>
 					</section>
@@ -233,6 +234,46 @@
 
 	changeText();
 						</code></pre>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>JavaScript Frameworks</h3>
+						<p>These are pre-written JS code that provide a set of libraries and tools for building web applications.</p>
+						<p>They allow developers to focus on the high-level aspects of the application, without having to worry about the underlying details and re-inventing the wheel by rewriting trivial code.</p>
+					</section>
+					<section>
+						<h4>Well known frameworks:</h4>
+						<ul>
+							<li>Svelte</li>
+							<li>Vue.js</li>
+							<li>React</li>
+							<li>Preact</li>
+							<li>AngularJS</li>
+							<li>Ember.js</li>
+							<li>Alpine.js</li>
+						</ul>
+					</section>
+					
+					<section>
+						<h3>Svelte</h3>
+						<p>
+							Svelte is a modern web framework that focuses on building highly efficient and fast web applications by moving much of the work that typically happens at runtime to build time.
+						</p>
+						<p>
+							Svelte compiles application code into highly efficient vanilla JavaScript, resulting in smaller bundle sizes, faster load times, and better overall performance.
+						</p>
+					</section>
+
+					<section>
+						<h3>Vue.js</h3>
+						<p>
+							Vue.JS is a progressive framework used for building simple, lightweight, and efficient web application.
+						</p>
+						<p>
+							Svelte compiles application code into highly efficient vanilla JavaScript, resulting in smaller bundle sizes, faster load times, and better overall performance.
+						</p>
 					</section>
 				</section>
 
