--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 							Vue.JS is a progressive framework used for building simple, lightweight, and efficient web application.
 						</p>
 						<p>
-							Svelte compiles application code into highly efficient vanilla JavaScript, resulting in smaller bundle sizes, faster load times, and better overall performance.
+							Vue.js is designed to be incrementally adoptable, meaning that it can be integrated into existing projects without requiring a complete rewrite. It also has a small learning curve, making it an ideal choice for beginners.
 						</p>
 					</section>
 				</section>
