--- a/index.html
+++ b/index.html
@@ -269,10 +269,23 @@
 					<section>
 						<h3>Vue.js</h3>
 						<p>
-							Vue.JS is a progressive framework used for building simple, lightweight, and efficient web application.
+							Vue.JS is a progressive framework that is designed to be incrementally adoptable. It also has a small learning curve, making it an ideal choice for beginners.
 						</p>
 						<p>
-							Vue.js is designed to be incrementally adoptable, meaning that it can be integrated into existing projects without requiring a complete rewrite. It also has a small learning curve, making it an ideal choice for beginners.
+							Vue.js uses a reactive data binding system. This makes it easy to build dynamic and interactive user interfaces without having to write a lot of boilerplate code.
+						</p>
+					</section>
+
+					<section>
+						<h3>React</h3>
+						<p>
+							Technically not a framework, React is a popular open-source library developed by Facebook.
+						</p>
+						<p>
+							One of its main features is its component-based architecture, which allows the interface to be broken down into smaller, reusable pieces of code.
+						</p>
+						<p>
+							React uses a virtual DOM to update the UI to minimize the number of updates that need to be made to the actual DOM.
 						</p>
 					</section>
 				</section>
