--- a/index.html
+++ b/index.html
@@ -215,6 +215,49 @@
 
 				<section>
 					<section>
+						<h3>CSS Frameworks</h3>
+						<p>These are pre-written sets of CSS and sometimes JavaScript code that provide a set of standardized styles, layouts, and UI components that can be easily customized and reused throughout a project.</p>
+					</section>
+					<section>
+						<h4>Well known CSS frameworks:</h4>
+						<ul>
+							<li>Bulma</li>
+							<li>Bootstrap</li>
+							<li>Tailwind</li>
+							<li>Foundation</li>
+							<li>Skeleton</li>
+							<li>Materialize</li>
+							<li>PureCSS</li>
+						</ul>
+					</section>
+					
+					<section>
+						<h3>Bootstrap</h3>
+						<p>
+							Directed at responsive, mobile-first front-end web development, Bootstrap focuses on simplifying the development of web pages with its several inbuilt HTML, CSS and JavaScript components.
+						</p>
+					</section>
+
+					<section>
+						<h3>Bulma</h3>
+						<p>
+							Bulma is designed to be lightweight and easy to use, with a simple and intuitive class names and a variety of easily customizable pre-built CSS components.
+						</p>
+					</section>
+
+					<section>
+						<h3>Tailwind</h3>
+						<p>
+							Tailwind CSS is designed to be highly customizable, in that allows developers to quickly and easily apply pre-built CSS classes to their HTML elements.
+						</p>
+						<p>
+							It includes a wide range of pre-built utility classes for typography, spacing, layout, colors, borders, and more.
+						</p>
+					</section>
+				</section>
+
+				<section>
+					<section>
 						<h3>JavaScript</h3>
 						<p>JS is a programming language used to create interactive and dynamic web pages.</p>
 						<p>It includes covering a range of programming fundamentals like data types, variables, functions, conditional statements, and loops.</p>
@@ -244,12 +287,11 @@
 						<p>They allow developers to focus on the high-level aspects of the application, without having to worry about the underlying details and re-inventing the wheel by rewriting trivial code.</p>
 					</section>
 					<section>
-						<h4>Well known frameworks:</h4>
+						<h4>Well known JS frameworks:</h4>
 						<ul>
 							<li>Svelte</li>
 							<li>Vue.js</li>
 							<li>React</li>
-							<li>Preact</li>
 							<li>AngularJS</li>
 							<li>Ember.js</li>
 							<li>Alpine.js</li>
@@ -304,6 +346,7 @@
 							<li>Reading the documentation directly</li>
 							<li>Taking short well structured courses like the ones by <a href="https://www.theodinproject.com/">The Odin Project</a></li>
 							<li>Referring to sites like <a href="https://www.w3schools.com/">W3Schools</a>, <a href="https://www.geeksforgeeks.org/">GeeksForGeeks</a>, <a href="https://www.freecodecamp.org/">FreeCodeCamp</a>, <a href="https://developer.mozilla.org/en-US/">MDN Web Docs</a></li>
+							<li>Staying up-to-date with the latest technologies and best practices</li>
 						</ul>
 					</section>
 				</section>
