--- a/index.html
+++ b/index.html
@@ -334,6 +334,22 @@
 
 				<section>
 					<section>
+						<h3>How do I create a backend?</h3>
+						<p>Now that you know how to go about making a decent frontend, lets talk about the backend</p>
+					</section>
+					<section>
+						<h3>Do I even need a backend?</h3>
+						<p>
+							A simple static website or even a dynamic one that doesn't need to rely on complex functionality like data storage and user authentication would not need a backend.
+						</p>
+						<p>
+							However, a backend is necessary when the web application requires dynamic functionality like authentication, user-generated content, or real-time updates.
+						</p>
+					</section>
+				</section>
+
+				<section>
+					<section>
 						<h3>How do I Start Learning Web Dev?</h3>
 						<p>
 							Once you have made the decision to get into the world of web development, there are a few approaches you can take to acquire the necessary knowledge and skills.
