--- a/index.html
+++ b/index.html
@@ -104,6 +104,15 @@
 				</section>
 
 				<section>
+					<section>
+						<h3>Some of the stuff I created as examples</h3>
+					</section>
+					<section data-background-iframe="https://megz15.github.io/NaadGen/" data-background-interactive></section>
+					<section data-background-image="./assets/user.gif"></section>
+					<section data-background-iframe="https://ghotbypasser.vercel.app/" data-background-interactive></section>
+				</section>
+
+				<section>
 					<h3>What is a front end and how is it different from a back one?</h3>
 				</section>
 
