--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<h3>What all can you make in it?</h3>
 						<p>
 							<ul>
-								<li>Make presentations like this using <b>reveal.js</b></li>
+								<li>Presentations like this using <b>reveal.js</b></li>
 								<li>Your portfolio website</li>
 								<li>Sites and apps like reddit, twitter, youtube etc.</li>
 								<li>Mobile apps using <b>React Native</b>, <b>Ionic framework</b></li>
@@ -95,8 +95,8 @@
 										<li>Emulate N64, DOS video games</li>
 										<li>Run computationally heavy tasks such as simulations.</li>
 									</ul>
-								<li>Create videos using remotion</li>
-								<li>Create programming languages like bhailang</li>
+								<li>Create videos using <b>remotion</b></li>
+								<li>Create programming languages like <b>bhailang</b></li>
 								<li>Fun shit like <a href="https://win11.blueedge.me">win11.blueedge.me</a></li>
 							</ul>
 						</p>
@@ -105,11 +105,18 @@
 
 				<section>
 					<section>
-						<h3>Some of the stuff I created as examples</h3>
+						<h3>Some of the stuff I created</h3>
 					</section>
 					<section data-background-iframe="https://megz15.github.io/NaadGen/" data-background-interactive></section>
 					<section data-background-image="./assets/user.gif"></section>
 					<section data-background-iframe="https://ghotbypasser.vercel.app/" data-background-interactive></section>
+				</section>
+
+				<section>
+					<section>
+						<h3>A few cool threejs examples</h3>
+					</section>
+					<section data-background-iframe="https://threejs.org/examples" data-background-interactive></section>
 				</section>
 
 				<section>
