--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
 						<p>
 							<ul>
 								<li>Presentations like this using <b>reveal.js</b></li>
-								<li>Your portfolio website</li>
+								<li>Your own portfolio website or resume</li>
 								<li>Sites and apps like reddit, twitter, youtube etc.</li>
-								<li>Mobile apps using <b>React Native</b>, <b>Ionic framework</b></li>
+								<li>Mobile apps using <b>React Native</b>, <b>Ionic</b></li>
 								<li>Desktop apps like VSCode using <b>Electron</b>, <b>Tauri</b></li>
 								<li>Progressive Web Apps</li>
-								<li>2D Graphics using <b>p5.js</b></li>
-								<li>3D Graphics using <b>three.js</b></li>
-								<li>Games using game engines <b>kaboom.js</b></li>
-								<li>3D Physics Simulation using <b>ammo.js</b>, <b>cannon.js</b></li>
+								<li>2D Graphics using <b><a href="https://p5js.org/examples/simulate-game-of-life.html">p5.js</a></b></li>
+								<li>3D Graphics using <b><a href="https://threejs.org/examples">three.js</a></b></li>
+								<li>Games using game engines <b><a href="https://kaboomjs.com/play?demo=rpg">kaboom.js</a></b></li>
+								<li>3D Physics Simulation using <b><a href="https://rawcdn.githack.com/kripken/ammo.js/99d0ec0b1e26d7ccc13e013caba8e8a5c98d953b/examples/webgl_demo_vehicle/index.html">ammo.js</a></b>, <b>cannon.js</b></li>
 							</ul>
 						</p>
 					</section>
@@ -97,7 +97,7 @@
 									</ul>
 								<li>Create videos using <b>remotion</b></li>
 								<li>Create programming languages like <b>bhailang</b></li>
-								<li>Fun shit like <a href="https://win11.blueedge.me">win11.blueedge.me</a></li>
+								<li>Fun shit like <b><a href="https://win11.blueedge.me">win11.blueedge.me</a></b>, or even a fully functional virtual <b>Windows95</b> and <b>Macintosh</b> system in an electron app</li>
 							</ul>
 						</p>
 					</section>
@@ -114,9 +114,10 @@
 
 				<section>
 					<section>
-						<h3>A few cool threejs examples</h3>
+						<h3>Cool portfolio websites</h3>
 					</section>
-					<section data-background-iframe="https://threejs.org/examples" data-background-interactive></section>
+					<section data-background-iframe="https://bruno-simon.com/" data-background-interactive></section>
+					<section data-background-iframe="http://www.rleonardi.com/interactive-resume/" data-background-interactive></section>
 				</section>
 
 				<section>
