--- a/index.html
+++ b/index.html
@@ -44,24 +44,10 @@
 					</section>
 					<section>
 						<ul>
-							<dl>
-								<li><dt>High demand</dt></li>
-								<dd>With the increasing importance of the internet in our daily lives, the demand for web developers has skyrocketed in recent years.</dd>
-								<br>
-								<li><dt>One Codebase to Rule Them All</dt></li>
-								<dd>Developers don't need to maintain multiple codebases for huge projects.</dd>
-							</dl>
-						</ul>
-					</section>
-					<section>
-						<ul>
-							<dl>
-								<li><dt>Constantly Evolving</dt></li>
-								<dd>With an average of 10 javascript framework coming into existence every second (source: trust me bro), there is always something new to learn and explore.</dd>
-								<br>
-								<li><dt>A11y</dt></li>
-								<dd>The web being a widely used platform and recent strides into making it more accessibile has allowed content to be generated and consumed by anyone, anywhere.</dd>
-							</dl>
+							<li>High demand</li>
+							<li>One Codebase to Rule Them All</li>
+							<li>Constantly Evolving<br>~10 js framework coming into existence every second (source: trust me bro)</li>
+							<li>A11y</li>
 						</ul>
 					</section>
 				</section>
@@ -125,17 +111,10 @@
 				</section>
 
 				<section>
-					<section>
-						<h3>Frontend</h3>
-						<p>
-							Frontend development involves creating user interfaces of a website or web application while keeping user experience in mind (UI/UX).
-						</p>
-					</section>
-					<section>
-						<p>
-							This includes designing and developing whatever the client interacts with, including the layout, visual components, and dynamic, interactive features, usually using HTML, CSS, and JavaScript.
-						</p>
-					</section>
+					<h3>Frontend</h3>
+					<p>
+						Frontend development involves creating user interfaces of a website or web application while keeping user experience in mind (UI/UX).
+					</p>
 				</section>
 
 				<section>
@@ -157,7 +136,7 @@
 
 				<section>
 					<h3>How do I start making frontend stuff?</h3>
-					<p>To start with frontend, you will need to learn the basics of HTML, CSS and JavaScript.</p>
+					<p>Learn HTML, CSS and JavaScript.</p>
 				</section>
 
 				<section>
@@ -292,7 +271,7 @@
 			heading.innerHTML = `5 + 15 = ${addNumbers(5, 15)}`;
 		}
 
-	changeText();
+		changeText();
 						</code></pre>
 					</section>
 				</section>
@@ -325,6 +304,8 @@
 						</p>
 					</section>
 
+					<section data-background-iframe="https://svelte-todomvc.surge.sh/" data-background-interactive></section>
+
 					<section>
 						<h3>Vue.js</h3>
 						<p>
@@ -334,6 +315,8 @@
 							Vue.js uses a reactive data binding system. This makes it easy to build dynamic and interactive user interfaces without having to write a lot of boilerplate code.
 						</p>
 					</section>
+
+					<section data-background-iframe="https://todomvc.com/examples/vue/" data-background-interactive></section>
 
 					<section>
 						<h3>React</h3>
@@ -347,6 +330,8 @@
 							React uses a virtual DOM to update the UI to minimize the number of updates that need to be made to the actual DOM.
 						</p>
 					</section>
+
+					<section data-background-iframe="https://todomvc.com/examples/react/" data-background-interactive></section>
 				</section>
 
 				<section>
@@ -357,11 +342,29 @@
 					<section>
 						<h3>Do I even need a backend?</h3>
 						<p>
-							A simple static website or even a dynamic one that doesn't need to rely on complex functionality like data storage and user authentication would not need a backend.
+							Necessary when the web application requires dynamic functionality like authentication, user-generated content, or real-time updates.
 						</p>
-						<p>
-							However, a backend is necessary when the web application requires dynamic functionality like authentication, user-generated content, or real-time updates.
-						</p>
+					</section>
+
+					<section>
+						<h3>NodeJS</h3>
+						<p>Popular runtime environment for building server-side programming with JavaScript</p>
+						<ul>
+							<li>Modules and NPM</li>
+							<li>Asynchronous</li>
+							<li>HTTP servers</li>
+							<li>DB integration</li>
+						</ul>
+					</section>
+					<section>
+						<h3>Python Backend</h3>
+						<p>Versatile language also used for backend dev</p>
+						<ul>
+							<li>Flask</li>
+							<li>Django</li>
+							<li>Asynchronous</li>
+							<li>DB integration</li>
+						</ul>
 					</section>
 				</section>
 
