--- a/index.html
+++ b/index.html
@@ -23,12 +23,18 @@
 					<h3 class="glow">Web Development</h3>
 					<small><h4>Created by <a target="_blank" href="https://github.com/megz15">Meghraj Goswami</a><h4></small>
 				</section>
+
+				<section>
+					<h4>Slides can be accessed at <a href="https://megz15.github.io/intro-to-webdev/">https://megz15.github.io/intro-to-webdev/</a></h4>
+					<img src="./assets/qr.jpeg" width="50%">
+				</section>
 				
 				<section>
 					<h3>What is Web Dev?</h3>
 					<p>
 						Web Development is the process of developing a website or a web application.
 					</p>
+					<img src="./assets/img1.png" width="50%">
 				</section>
 
 				<section>
@@ -92,7 +98,7 @@
 						<h3>Some of the stuff I created</h3>
 					</section>
 					<section data-background-iframe="https://megz15.github.io/NaadGen/" data-background-interactive></section>
-					<section data-background-image="./assets/user.gif"></section>
+					<section data-background-image="./assets/user.gif" data-background-size="contain"></section>
 					<section data-background-iframe="https://ghotbypasser.vercel.app/" data-background-interactive></section>
 				</section>
 
